--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,30 @@
   <title>h264</title>
 </head>
 
-<body>
-  <audio id="sc_audio" autoplay></audio>
+<body style="margin: 0; padding: 0; height: 100%; overflow: hidden;">
+  <canvas id="stream_canvas"></canvas>
+
+  <div class="lock">
+      <!-- <button href="/lock/action=unlock" style="font-size: 5em">UNLOCK</button> -->
+      <!-- <button href="/lock/action=reject" style="font-size: 5em">REJECT</button> -->
+      <button onclick="lock('unlock');" style="font-size: 5em">UNLOCK</button>
+      <button onclick="lock('reject');" style="font-size: 5em">REJECT</button>
+  </div>
+
+  <script>
+    var lock = (action) => {
+      var xmlHttp = new XMLHttpRequest();
+      xmlHttp.open("GET", `/lock?action=${action}`); // false for synchronous request
+      xmlHttp.send();
+    }
+  </script>
 
   <script type="text/javascript" src="http-live-player.js"></script>
   <!-- <script type="text/javascript" src="binary.min.js"></script> -->
   <script type="text/javascript">
-    var canvas = document.createElement("canvas");
+    // var canvas = document.createElement("canvas");
+    var canvas = document.getElementById('stream_canvas');
+    canvas.style = "width: 100%; height: auto";
     document.body.insertBefore(canvas, document.body.firstChild);
 
     // Create h264 player.
@@ -22,7 +39,7 @@
     window.wsavc = wsavc;
 
     // Set server --> client audio stream.
-    document.getElementById('sc_audio').setAttribute('src', 'http://' + document.location.hostname + ':8081/audio.wav');
+    // document.getElementById('sc_audio').setAttribute('src', 'http://' + document.location.hostname + ':8081/audio.wav');
   </script>
   <!-- <script type="text/javascript">
     // Set client -> server audio stream.
